--- a/JiaoBaoYun-hb/html/cloud/storage_transport.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_transport.html
@@ -856,8 +856,7 @@
 						console.log('七牛上传token:' + JSON.stringify(QNUptoken));
 						if(QNUptoken.Status == 0) { //失败
 							mui.toast('获取上传凭证失败 ' + QNUptoken.Message);
-							console.log('### ERROR ### 请求上传凭证失败' + QNUptoken.Message);
-							wd.close();
+							console.log('### ERROR ### 获取上传凭证失败' + QNUptoken.Message);
 						} else {
 							CloudFileUtil.upload(fPath, QNUptoken.Data.Token, QNUptoken.Data.Key, function(upload, status) {
 								//上传任务完成的监听
@@ -907,9 +906,7 @@
 									document.getElementById("up_waiting_" + upload.__UUID__).innerText = '上传失败';
 									mui.toast('上传失败:' + status + ' ' + upload.responseText);
 								}
-
 							}, function(upload, status) {
-
 								//上传任务状态监听
 								//上传任务的标识
 								var id = upload.__UUID__;
@@ -973,8 +970,8 @@
 							});
 						}
 					}, function(xhr, type, errorThrown) {
-						mui.toast('获取七牛上传token失败：' + type);
-						console.log('获取七牛上传token失败：' + type);
+						mui.toast('请求上传凭证失败：' + type);
+						console.log('请求上传凭证失败：' + type);
 					});
 				}
 
