--- a/JiaoBaoYun-hb/html/mine/qun_manage_info_change.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_info_change.html
@@ -185,10 +185,10 @@
 				}, function(successCB) {
 					console.log('上传并修改群头像，成功的回调' + JSON.stringify(successCB));
 					document.getElementById("choose").innerHTML = '<img src="' + updateHeadImg(successCB, 2) + '" style="margin-top:0px;border: 1px solid #F2F2F2;border-radius: 50%;height: 100px;width: 100px;"/>';
-					mui.toast('修改群头像成功');
+					mui.toast('更新群头像成功');
 				}, function(errorCB) {
 					console.log('上传并修改群头像，失败的回调' + JSON.stringify(errorCB));
-					mui.toast('上传失败 ' + JSON.stringify(errorCB));
+					mui.toast('更新群头像失败 ' + JSON.stringify(errorCB));
 				});
 
 				/**
