--- a/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
@@ -29,7 +29,7 @@
 		</header>
 
 		<div class="mui-content" style="background-color: white;">
-			<div id="expertInfo" style="min-height: 150px;height: auto;"><br/>
+			<div id="expertInfo" style="min-height: 150px;height: auto;background-image:url(../../image/qiuzhi/expertBG.jpg) ;"><br/>
 				<div style="text-align: center;">
 					<img id="expertImg" style="width: 50px;height: 50px;border-radius: 50%;" src="../../image/utils/default_personalimage.png" />
 				</div>
@@ -42,7 +42,7 @@
 
 				<!--<textarea  id="UserNote" id='leaveTitle'  onblur="inputOnblur(this)" class="mui-input-clear question" placeholder="" style="min-height: 30px;height: 30px;；width: 100%;background-color: transparent;font-size: 15px;border-color:transparent ;"></textarea>-->
 			</div>
-			<hr style="height:1px;border:none;border-top:1px solid lightgray;" />
+			<!--<hr style="height:1px;border:none;border-top:1px solid lightgray;" />-->
 
 			<div style="margin-top: 0px;margin-left: 20px;">
 				<div id="FocusAsk" style="float: left;width: 70px;margin-left: 5px;">
