--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -48,6 +48,11 @@
 				/*去掉横线*/
 			}
 			
+			.mui-table-view-cell {
+				background-color: #fff;
+				margin-top: 1rem;
+			}
+			
 			.mui-row-padding-8px {
 				padding: 8px;
 				/*内边距为8px*/
@@ -247,145 +252,149 @@
 
 		//请求数据
 		function requestData(comData) {
-			//			getBottomList();
-			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			if(gid) {
+				getBottomList();
+			} else {
 
-			//28.（用户空间）获取用户针对某用户的空间列表
-			postDataPro_getUserSpacesByUserForPublisher(comData, wd, function(data) {
-				wd.close();
-				console.log('获取个人空间列表_getUserSpacesByUserForPublisher:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-				if(data.RspCode == 0) {
-					if(data.RspData.Data.length == 0) {
-						mui.toast('暂无动态')
-						return;
-					}
-					setUserSpaceReadByUser();
-					totalCnt = data.RspData.TotalCnt;
-					var tempRspData = data.RspData.Data;
-					//获取当前回调留言的个人信息，主要是头像、昵称
-					var tempArray = [];
-					//先遍历回调数组，获取
-					for(var item in tempRspData) {
-						//当前循环的model
-						var tempModel0 = tempRspData[item];
-						//将当前model中id塞到数组
-						tempArray.push(tempModel0.PublisherId);
-						//合并数组,点赞的人
-						tempArray = tempArray.concat(tempModel0.LikeUsers);
-						tempModel0.LikeUsers = arrayDupRemoval(tempModel0.LikeUsers);
-						//循环当前model中的回复数组
-						for(var item1 in tempModel0.Comments) {
-							//回复中的model
-							var tempModel1 = tempModel0.Comments[item1];
-							//将回复中的id塞到数组
-							tempArray.push(tempModel1.UserId);
-							tempArray.push(tempModel1.ReplyId);
-							//
-							for(var item2 in tempModel1.Replys) {
+				// 等待的对话框
+				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+
+				//28.（用户空间）获取用户针对某用户的空间列表
+				postDataPro_getUserSpacesByUserForPublisher(comData, wd, function(data) {
+					wd.close();
+					console.log('获取个人空间列表_getUserSpacesByUserForPublisher:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+					if(data.RspCode == 0) {
+						if(data.RspData.Data.length == 0) {
+							mui.toast('暂无动态')
+							return;
+						}
+						setUserSpaceReadByUser('['+publisherId+']');
+						totalCnt = data.RspData.TotalCnt;
+						var tempRspData = data.RspData.Data;
+						//获取当前回调留言的个人信息，主要是头像、昵称
+						var tempArray = [];
+						//先遍历回调数组，获取
+						for(var item in tempRspData) {
+							//当前循环的model
+							var tempModel0 = tempRspData[item];
+							//将当前model中id塞到数组
+							tempArray.push(tempModel0.PublisherId);
+							//合并数组,点赞的人
+							tempArray = tempArray.concat(tempModel0.LikeUsers);
+							tempModel0.LikeUsers = arrayDupRemoval(tempModel0.LikeUsers);
+							//循环当前model中的回复数组
+							for(var item1 in tempModel0.Comments) {
 								//回复中的model
-								var tempModel2 = tempModel1.Replys[item2];
+								var tempModel1 = tempModel0.Comments[item1];
 								//将回复中的id塞到数组
-								tempArray.push(tempModel2.UserId);
-								tempArray.push(tempModel2.ReplyId);
+								tempArray.push(tempModel1.UserId);
+								tempArray.push(tempModel1.ReplyId);
+								//
+								for(var item2 in tempModel1.Replys) {
+									//回复中的model
+									var tempModel2 = tempModel1.Replys[item2];
+									//将回复中的id塞到数组
+									tempArray.push(tempModel2.UserId);
+									tempArray.push(tempModel2.ReplyId);
+								}
 							}
 						}
-					}
-					//给数组去重
-					tempArray = arrayDupRemoval(tempArray);
-					//发送获取用户资料申请
-					var tempData = {
-						vvl: tempArray.join(), //用户id，查询的值,p传个人ID,g传ID串
-						vtp: 'g' //查询类型,p(个人)g(id串)
-					}
+						//给数组去重
+						tempArray = arrayDupRemoval(tempArray);
+						//发送获取用户资料申请
+						var tempData = {
+							vvl: tempArray.join(), //用户id，查询的值,p传个人ID,g传ID串
+							vtp: 'g' //查询类型,p(个人)g(id串)
+						}
 
-					//21.通过用户ID获取用户资料
-					postDataPro_PostUinf(tempData, wd, function(data1) {
-						wd.close();
-						console.log('获取个人资料success:RspCode:' + data1.RspCode + ',RspData:' + JSON.stringify(data1.RspData) + ',RspTxt:' + data1.RspTxt);
-						if(data1.RspCode == 0) {
-							//循环当前的个人信息返回值数组
-							for(var i in data1.RspData) {
-								//当前model
-								var tempModel = data1.RspData[i];
-								//更新头像
-								tempModel.uimg = updateHeadImg(tempModel.uimg, 2);
-								//循环留言数组
-								for(var item in tempRspData) {
-									//当前循环的model
-									var tempModel0 = tempRspData[item];
-									//遍历点赞的人
-									for(var item2 in tempModel0.LikeUsers) {
-										//										console.log('item2;;;;;==' + tempModel.utid + ',' + tempModel0.LikeUsers[item2]);
-										if(tempModel.utid == tempModel0.LikeUsers[item2]) {
-											tempModel0.LikeUsers.splice(item2, 1, tempModel);
-										}
-									}
-									//对比id是否一致
-									if(tempModel0.PublisherId == tempModel.utid) {
-										//合并
-										tempModel0 = $.extend(tempModel0, tempModel);
-									}
-									//循环当前model中的回复数组
-									for(var item1 in tempModel0.Comments) {
-										//回复中的model
-										var tempModel1 = tempModel0.Comments[item1];
-										//对比id是否一致
-										if(tempModel.utid == tempModel1.UserId) {
-											//添加参数
-											tempModel1.UserIdName = tempModel.unick;
-										}
-										if(tempModel.utid == tempModel1.ReplyId) {
-											//添加参数
-											tempModel1.ReplyIdName = tempModel.unick;
-										}
-										//
-										for(var item2 in tempModel1.Replys) {
-											//回复中的model
-											var tempModel2 = tempModel1.Replys[item2];
-											//对比id是否一致
-											if(tempModel.utid == tempModel2.UserId) {
-												//添加参数
-												tempModel2.UserIdName = tempModel.unick;
+						//21.通过用户ID获取用户资料
+						postDataPro_PostUinf(tempData, wd, function(data1) {
+							wd.close();
+							console.log('获取个人资料success:RspCode:' + data1.RspCode + ',RspData:' + JSON.stringify(data1.RspData) + ',RspTxt:' + data1.RspTxt);
+							if(data1.RspCode == 0) {
+								//循环当前的个人信息返回值数组
+								for(var i in data1.RspData) {
+									//当前model
+									var tempModel = data1.RspData[i];
+									//更新头像
+									tempModel.uimg = updateHeadImg(tempModel.uimg, 2);
+									//循环留言数组
+									for(var item in tempRspData) {
+										//当前循环的model
+										var tempModel0 = tempRspData[item];
+										//遍历点赞的人
+										for(var item2 in tempModel0.LikeUsers) {
+											//										console.log('item2;;;;;==' + tempModel.utid + ',' + tempModel0.LikeUsers[item2]);
+											if(tempModel.utid == tempModel0.LikeUsers[item2]) {
+												tempModel0.LikeUsers.splice(item2, 1, tempModel);
 											}
-											if(tempModel.utid == tempModel2.ReplyId) {
+										}
+										//对比id是否一致
+										if(tempModel0.PublisherId == tempModel.utid) {
+											//合并
+											tempModel0 = $.extend(tempModel0, tempModel);
+										}
+										//循环当前model中的回复数组
+										for(var item1 in tempModel0.Comments) {
+											//回复中的model
+											var tempModel1 = tempModel0.Comments[item1];
+											//对比id是否一致
+											if(tempModel.utid == tempModel1.UserId) {
 												//添加参数
-												tempModel2.ReplyIdName = tempModel.unick;
+												tempModel1.UserIdName = tempModel.unick;
+											}
+											if(tempModel.utid == tempModel1.ReplyId) {
+												//添加参数
+												tempModel1.ReplyIdName = tempModel.unick;
+											}
+											//
+											for(var item2 in tempModel1.Replys) {
+												//回复中的model
+												var tempModel2 = tempModel1.Replys[item2];
+												//对比id是否一致
+												if(tempModel.utid == tempModel2.UserId) {
+													//添加参数
+													tempModel2.UserIdName = tempModel.unick;
+												}
+												if(tempModel.utid == tempModel2.ReplyId) {
+													//添加参数
+													tempModel2.ReplyIdName = tempModel.unick;
+												}
 											}
 										}
 									}
 								}
 							}
-						}
-						console.log('循环遍历后的值：' + JSON.stringify(tempRspData));
+							console.log('循环遍历后的值：' + JSON.stringify(tempRspData));
 
-						var table = document.body.querySelector('.mui-table-view');
-						//判断是加载更多1，还是刷新2
-						if(flag == 1) {
-							var tempLength = zonepArray.length;
-							//合并数组
-							zonepArray = zonepArray.concat(tempRspData);
-							mui('#pullrefresh').pullRefresh().endPullupToRefresh(); //参数为true代表没有更多数据了。
-							for(var i = tempLength; i < zonepArray.length; i++) {
-								id = i;
-								var data = addData(i);
-								dynamiclistitem.addItem(table, data, id);
+							var table = document.body.querySelector('.mui-table-view');
+							//判断是加载更多1，还是刷新2
+							if(flag == 1) {
+								var tempLength = zonepArray.length;
+								//合并数组
+								zonepArray = zonepArray.concat(tempRspData);
+								mui('#pullrefresh').pullRefresh().endPullupToRefresh(); //参数为true代表没有更多数据了。
+								for(var i = tempLength; i < zonepArray.length; i++) {
+									id = i;
+									var data = addData(i);
+									dynamiclistitem.addItem(table, data, id);
+								}
+							} else {
+								tempPage = 1;
+								zonepArray = tempRspData;
+								table.innerHTML = '';
+								for(var i = 0; i < zonepArray.length; i++) {
+									id = i;
+									var data = addData(i);
+									dynamiclistitem.addItem(table, data, id);
+								}
 							}
-						} else {
-							tempPage = 1;
-							zonepArray = tempRspData;
-							table.innerHTML = '';
-							for(var i = 0; i < zonepArray.length; i++) {
-								id = i;
-								var data = addData(i);
-								dynamiclistitem.addItem(table, data, id);
-							}
-						}
-					});
-				} else {
-					mui.toast(data.RspTxt);
-				}
-			});
+						});
+					} else {
+						mui.toast(data.RspTxt);
+					}
+				});
+			}
 		}
 
 		var id = 0; //cell的id
@@ -502,7 +511,7 @@
 							console.log(praiseNameList.length)
 							if(praiseNameList.length > 0) {
 								var praiseName = praiseNameList[0];
-								praiseName.innerHTML = praiseName.innerHTML + '、' + personalunick;
+								praiseName.innerHTML = personalunick + '、' + praiseName.innerHTML;
 								console.log(praiseName.innerHTML);
 							} else {
 
@@ -533,7 +542,7 @@
 							if(praiseName.innerHTML.indexOf('、') > -1) {
 								console.log('多个人点赞')
 								praiseName.innerHTML = praiseName.innerHTML.replace('、' + personalunick, '');
-								praiseName.innerHTML = praiseName.innerHTML.replace(personalunick, '');
+								praiseName.innerHTML = praiseName.innerHTML.replace(personalunick + '、', '');
 							} else {
 								console.log('一个人点赞')
 
@@ -775,7 +784,8 @@
 		}
 
 		//设置个人空间动态为已读
-		function setUserSpaceReadByUser() {
+		function setUserSpaceReadByUser(upString) {
+			
 			if(personalUTID == publisherId) {
 				var comData = {
 					userId: personalUTID, //用户ID
@@ -791,7 +801,7 @@
 			//			if(NoReadCnt != 0) { //如果未读条数不为0，则设置空间状态为已读
 			var comData = {
 				userId: personalUTID, //用户ID
-				publisherId: publisherId
+				publisherIds: upString
 			};
 
 			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
@@ -912,6 +922,7 @@
 					}
 					userIds = arrayDupRemoval(userIds)
 					upString = arrayToStr(userIds)
+					setUserSpaceReadByUser(upString);
 					getAllUserSpacesByUser(upString); //获取多用户空间列表
 
 				} else {
@@ -952,6 +963,7 @@
 						tempArray.push(tempModel0.PublisherId);
 						//合并数组,点赞的人
 						tempArray = tempArray.concat(tempModel0.LikeUsers);
+						console.log(JSON.stringify(tempModel0.LikeUsers));
 						tempModel0.LikeUsers = arrayDupRemoval(tempModel0.LikeUsers);
 						//循环当前model中的回复数组
 						for(var item1 in tempModel0.Comments) {
