--- a/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
@@ -37,7 +37,7 @@
 					<h4 id="ExpertChannels"></h4>
 				</div>
 				<div style="margin-bottom: 10px;">
-					<p id="UserNote" style="margin: 5px;font-size: 15px;text-align: center;"></p>
+					<p id="UserNote" style="margin: 5px;font-size: 15px;text-align: center;color: white;"></p>
 				</div>
 
 				<!--<textarea  id="UserNote" id='leaveTitle'  onblur="inputOnblur(this)" class="mui-input-clear question" placeholder="" style="min-height: 30px;height: 30px;；width: 100%;background-color: transparent;font-size: 15px;border-color:transparent ;"></textarea>-->
@@ -304,7 +304,7 @@
 			nodes.AskNum.innerHTML = ExpertsInfo.AskNum + '<span class="mui-icon mui-icon-forward"></span>';
 			//如果是自己，显示编辑简介按钮
 			if(ExpertsInfo.UserId == personalUTID) {
-				nodes.UserNote.innerHTML = ExpertsInfo.UserNote + ' ' + '<img id="bianji" style = "width:20px;height:20px"  src="../../image/qiuzhi/bianji.png" />';
+				nodes.UserNote.innerHTML = ExpertsInfo.UserNote + ' ' + '<img id="bianji" style = "width:20px;height:20px;"  src="../../image/qiuzhi/bianji.png" />';
 			} else {
 				nodes.UserNote.innerHTML = ExpertsInfo.UserNote;
 			}
