--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
@@ -208,7 +208,7 @@
 						<div class="mui-media-body">
 							<span id="liulanshu" class="mui-icon iconfont icon-liulan"></span>
 							<span id="guanzhushu" class="mui-icon iconfont icon-31guanzhu1xuanzhong"></span>
-							<button id="guanzhu" type="button" class="mui-btn mui-btn-blue mui-pull-right">关注</button>
+							<button id="guanzhu" type="button" class="mui-btn mui-btn-blue mui-pull-right" style="width: 70px;">关注</button>
 						</div>
 					</li>
 					<div id="answer" style="background-color:#efeff4;">
