--- a/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_main.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_main.html
@@ -16,8 +16,8 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title"></h1>
-			<a id="commit" class="mui-icon mui-icon-checkmarkempty mui-pull-right" style="font-size: 40px;line-height: 0.6;color: gray;"></a>
+			<h1 class="mui-title"style="color: white;"></h1>
+			<h1 id="commit" class="mui-title"style="text-align: right;right: 10px;color: gray;">完成</h1>
 		</header>
 		<div class="mui-content">
 	</body>
