更新按钮显示

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
@@ -34,7 +34,7 @@
 						<h5 id="anthor-name" class="anthor-name single-line"></h5>
 						<p id="anthor-info" class="anthor-intro single-line"></p>
 					</div>
-					<button id="btn-focus" type="button" class="mui-btn mui-pull-right btn-attention">关注</button>
+					<button id="btn-focus" type="button" class="mui-btn mui-pull-right btn-attention" style="width: 70px;">关注</button>
 				</div>
 				<!--问题控件-->
 				<div class="questionContent-container">
@@ -47,7 +47,7 @@
 				</div>
 				<!--评论数和排序选项-->
 				<div class="comments-info">
-					<p id="comments-no" class="comment-no mui-pull-left">你好</p>
+					<p id="comments-no" class="comment-no mui-pull-left"></p>
 					<select id="order-selector" class="order-selector display-inlineBlock">
 						<option id="reverse-order" value="2">倒序排列</option>
 						<option value="1">顺序排列</option>
